[gd_scene load_steps=7 format=3 uid="uid://b8d1f7wfft7ip"]

[ext_resource type="Script" uid="uid://bojfj581b74xs" path="res://addons/custom_global_light_function/src/cglf_manager.gd" id="1_avgqn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lu1kq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_muodn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6xf2b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4lomg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ftocf"]

[node name="CGLF" type="Control" node_paths=PackedStringArray("_cglf_inc_path_text_window", "_ignore_blacklist_checkbox", "_replace_existing_light_functions_checkbox", "_shader_type_spatial", "_shader_type_canvas_item", "_shader_type_particles", "_shader_type_sky", "_shader_type_fog", "_blacklist", "_blacklist_input", "_light_function_view", "_no_light_function_view")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_avgqn")
_cglf_inc_path_text_window = NodePath("Light Function View/VBoxContainer/CGLF Inc File Path/CGLF Inc Path Text Window")
_ignore_blacklist_checkbox = NodePath("Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/Ignore Blacklist")
_replace_existing_light_functions_checkbox = NodePath("Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/Replace Existing Light Functions2")
_shader_type_spatial = NodePath("Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Spatial")
_shader_type_canvas_item = NodePath("Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/CanvasItem")
_shader_type_particles = NodePath("Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Particles")
_shader_type_sky = NodePath("Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Sky")
_shader_type_fog = NodePath("Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Fog")
_blacklist = NodePath("Light Function View/VBoxContainer/Blacklist/Blacklist Background/List")
_blacklist_input = NodePath("Light Function View/VBoxContainer/Blacklist/HBoxContainer/Blacklist Input Shader File Path")
_light_function_view = NodePath("Light Function View")
_no_light_function_view = NodePath("No Light Function View")

[node name="Light Function View" type="Control" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Light Function View"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="CGLF Inc File Path" type="VBoxContainer" parent="Light Function View/VBoxContainer"]
layout_mode = 2

[node name="CGLF Include File Title" type="RichTextLabel" parent="Light Function View/VBoxContainer/CGLF Inc File Path"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_lu1kq")
bbcode_enabled = true
text = "[b]CGLF Include File Path[/b]"
fit_content = true
scroll_active = false
vertical_alignment = 2
drag_and_drop_selection_enabled = false

[node name="CGLF Inc Path Text Window" type="LineEdit" parent="Light Function View/VBoxContainer/CGLF Inc File Path"]
layout_mode = 2
text = "res://addons/custom_global_light_function/cglf.gdshaderinc"
placeholder_text = "CGLF Inc Path"
emoji_menu_enabled = false

[node name="Buttons" type="HBoxContainer" parent="Light Function View/VBoxContainer/CGLF Inc File Path"]
layout_mode = 2

[node name="Open File" type="Button" parent="Light Function View/VBoxContainer/CGLF Inc File Path/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open File"
text_overrun_behavior = 3

[node name="Copy Path" type="Button" parent="Light Function View/VBoxContainer/CGLF Inc File Path/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Copy Path"
text_overrun_behavior = 3

[node name="Copy to Clipboard" type="Button" parent="Light Function View/VBoxContainer/CGLF Inc File Path"]
layout_mode = 2
text = "Copy Injection Code"
text_overrun_behavior = 3

[node name="Update shaders Window" type="VBoxContainer" parent="Light Function View/VBoxContainer"]
layout_mode = 2

[node name="Update Shaders Title" type="RichTextLabel" parent="Light Function View/VBoxContainer/Update shaders Window"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_muodn")
bbcode_enabled = true
text = "[b]Update Shaders"
fit_content = true
scroll_active = false

[node name="Update Shaders" type="Button" parent="Light Function View/VBoxContainer/Update shaders Window"]
layout_mode = 2
tooltip_text = "Injects the CGLF Include into all shaders.

If you wish for a shader to not be affected, add it to the blacklist.

An ERROR is thrown for each shader affected, this error is expected and will not cause any isue."
text = "Update Shaders"
text_overrun_behavior = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Light Function View/VBoxContainer/Update shaders Window"]
layout_mode = 2

[node name="Ignore Blacklist" type="CheckBox" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer"]
layout_mode = 2
tooltip_text = "Ignores Blacklist and updates all shaders in the proejct."
action_mode = 0
text = "Ignore Blacklist"
text_overrun_behavior = 3

[node name="Replace Existing Light Functions2" type="CheckBox" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Replace Existing Light Functions"
text_overrun_behavior = 3

[node name="Shader Types TItle" type="RichTextLabel" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_6xf2b")
bbcode_enabled = true
text = "[b]Shader Types"
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spatial" type="CheckBox" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Spatial"
text_overrun_behavior = 3

[node name="CanvasItem" type="CheckBox" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CanvasItem"
text_overrun_behavior = 3

[node name="Particles" type="CheckBox" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Particles"
text_overrun_behavior = 3

[node name="Sky" type="CheckBox" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sky"
text_overrun_behavior = 3

[node name="Fog" type="CheckBox" parent="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fog"
text_overrun_behavior = 3

[node name="Blacklist" type="VBoxContainer" parent="Light Function View/VBoxContainer"]
layout_mode = 2

[node name="Blacklist Title" type="RichTextLabel" parent="Light Function View/VBoxContainer/Blacklist"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4lomg")
bbcode_enabled = true
text = "[b]Blacklist"
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="Light Function View/VBoxContainer/Blacklist"]
layout_mode = 2

[node name="Blacklist Input Shader File Path" type="LineEdit" parent="Light Function View/VBoxContainer/Blacklist/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select a .gdshader file in the File Dock to automatically add the path to the Blacklist input text bar.

Or paste the file path into the input text bar. "
placeholder_text = "Select shader file in File Dock or paste shader file path"
emoji_menu_enabled = false

[node name="Add Blacklist Item" type="Button" parent="Light Function View/VBoxContainer/Blacklist/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="Blacklist Background" type="Panel" parent="Light Function View/VBoxContainer/Blacklist"]
clip_contents = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 0

[node name="List" type="ItemList" parent="Light Function View/VBoxContainer/Blacklist/Blacklist Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Remove Blacklisted Item" type="Button" parent="Light Function View/VBoxContainer/Blacklist"]
layout_mode = 2
text = "Remove"
text_overrun_behavior = 3

[node name="No Light Function View" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="RichTextLabel" parent="No Light Function View"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ftocf")
bbcode_enabled = true
text = "No Light function selected
Create a new one in the selection box above"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="Light Function View/VBoxContainer/CGLF Inc File Path/CGLF Inc Path Text Window" to="." method="_on_cglf_inc_path_text_window_text_changed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/CGLF Inc File Path/Buttons/Open File" to="." method="_open_cglf_inc"]
[connection signal="pressed" from="Light Function View/VBoxContainer/CGLF Inc File Path/Buttons/Copy Path" to="." method="_cglf_copy_path_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/CGLF Inc File Path/Copy to Clipboard" to="." method="_cglf_copy_boilerplate"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/Update Shaders" to="." method="_update_shaders"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/Ignore Blacklist" to="." method="_on_ignore_blacklist_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/Replace Existing Light Functions2" to="." method="_on_replace_existing_light_functions_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Spatial" to="." method="_on_spatial_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/CanvasItem" to="." method="_on_canvas_item_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Particles" to="." method="_on_particles_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Sky" to="." method="_on_sky_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Update shaders Window/VBoxContainer/HBoxContainer/VBoxContainer/Fog" to="." method="_on_fog_pressed"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Blacklist/HBoxContainer/Add Blacklist Item" to="." method="_add_blacklist_item"]
[connection signal="pressed" from="Light Function View/VBoxContainer/Blacklist/Remove Blacklisted Item" to="." method="_remove_blacklisted_item"]
